--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 
+/* Global class */
 *{
   margin: 0;
   padding: 0;
@@ -64,7 +65,9 @@ body{
   border-radius: 50%;
   margin-right: 10px;
 }
+/* //Global class */
 
+/* Left block */
 .user-contain h3{
   font-weight: 700;
 }
@@ -102,42 +105,16 @@ body{
   line-height: 30px;
 }
 
-.box-right .top{
-  border-left: 1px solid #b1b1b2;
-}
-
-.sending-messagge{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #f3eeea;
-  height: 80px;
-  padding: 10px;
-}
-
-.sending-messagge i{
-  font-size: 30px;
-  color: #6b7376;
-}
-
-.sending-messagge input{
-  width: 80%;
-  line-height: 35px;
-  padding: 10px;
-  border-radius: 10px;
-  border: none;
-}
-
 .input-user{
   height: 50px;
-  padding: 5px;
+  padding: 3px;
 }
 
 .input-user input{
   width: 92%;
   line-height: 40px;
   border-radius: 5px;
-  border: 1px solid #e9eaea;
+  border: 1px solid white;
   padding-left: 15px;
 }
 
@@ -172,6 +149,38 @@ body{
   color: rgb(170, 169, 169);
 }
 
+.active{
+  background-color: #eaebeb !important;
+}
+/* //Left block */
+
+/* Right box */
+.box-right .top{
+  border-left: 1px solid #b1b1b2;
+}
+
+.sending-messagge{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #f3eeea;
+  height: 80px;
+  padding: 10px;
+}
+
+.sending-messagge i{
+  font-size: 30px;
+  color: #6b7376;
+}
+
+.sending-messagge input{
+  width: 80%;
+  line-height: 35px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+}
+
 .right-contact-box p{
   color: rgb(170, 169, 169);
 }
@@ -182,6 +191,7 @@ body{
   padding: 30px 50px;
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 
 .row-message{
@@ -214,19 +224,13 @@ body{
   background-color: #d6fbbb;
 }
 
-.active{
-  background-color: #eaebeb !important;
-}
-
-.contact-box:hover{
-  background-color: rgb(247, 247, 247);
-}
-
 .row-message p{
   padding: 10px 5px;
 }
+/* //Right box */
 
-.rec, .smile{
+/* Effetti hover */
+.rec, .smile, .icon-contain i, .icon-contact i{
   transition: all 0.5s;
 }
 
@@ -238,9 +242,15 @@ body{
   color: rgb(197, 197, 24);
 }
 
-.search{
-  padding: 5px;
+.input-contain{
+  background-color: white;
+  border: 1px solid lightgrey;
 }
 
+.icon-contain i:hover, .icon-contact i:hover{
+  color: grey;
+} 
 
-
+.contact-box:hover{
+  background-color: rgb(247, 247, 247);
+}
