--- a/css/style.css
+++ b/css/style.css
@@ -110,10 +110,14 @@ body{
   padding: 3px;
 }
 
+.input-user i{
+  padding-left: 5px;
+}
+
 .input-user input{
   width: 92%;
   line-height: 40px;
-  border-radius: 5px;
+  border-radius: 10px;
   border: 1px solid white;
   padding-left: 15px;
 }
